<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginDefault"
        app:layout_constraintBottom_toTopOf="@id/mainLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginDefault"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/searchLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/locationImageView"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                app:srcCompat="@drawable/ic_pin_drop_black_48dp" />

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CITY_NAME"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/textSize1"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginDefault"
            android:background="@android:drawable/editbox_background_normal"
            android:padding="@dimen/paddingSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/locationLayout"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/hintSearch"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/textColor1"
                android:textColorHint="@color/textColor2"
                android:textSize="@dimen/textSize1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/closeImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/closeImageView"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:layout_marginStart="@dimen/marginDefault"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/searchView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_black_48dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/marginDouble"
        android:layout_marginEnd="@dimen/marginDouble"
        android:layout_marginBottom="@dimen/marginDouble"
        app:layout_constraintBottom_toTopOf="@id/adView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favoriteFab"
            android:layout_width="@dimen/fabSize"
            android:layout_height="@dimen/fabSize"
            android:layout_margin="@dimen/marginFab"
            android:background="@drawable/fab_button"
            android:padding="@dimen/marginDefault"
            app:layout_constraintBottom_toTopOf="@id/gpsFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_favorite_black_48dp"
            app:tint="@color/WHITE" />

        <ImageView
            android:id="@+id/gpsFab"
            android:layout_width="@dimen/fabSize"
            android:layout_height="@dimen/fabSize"
            android:layout_margin="@dimen/marginFab"
            android:background="@drawable/fab_button"
            android:padding="@dimen/marginDefault"
            app:layout_constraintBottom_toTopOf="@id/themeFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_my_location_black_48dp"
            app:tint="@color/WHITE" />

        <ImageView
            android:id="@+id/themeFab"
            android:layout_width="@dimen/fabSize"
            android:layout_height="@dimen/fabSize"
            android:layout_margin="@dimen/marginFab"
            android:background="@drawable/fab_button"
            android:padding="@dimen/marginDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/themeLayout"
            app:srcCompat="@drawable/ic_color_lens_black_48dp" />

        <include
            android:id="@+id/themeLayout"
            layout="@layout/item_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/themeFab" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/BannerAd1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLayout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorialLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/textColor2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/tutorialCloseImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="@dimen/marginDouble"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_black_48dp"
            app:tint="@color/WHITE" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="258dp"
            android:gravity="end"
            android:text="@string/tutorial1"
            android:textColor="@color/WHITE"
            android:textSize="@dimen/textSize1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="194dp"
            android:gravity="end"
            android:text="@string/tutorial2"
            android:textColor="@color/WHITE"
            android:textSize="@dimen/textSize1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="130dp"
            android:gravity="end"
            android:text="@string/tutorial3"
            android:textColor="@color/WHITE"
            android:textSize="@dimen/textSize1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:layout_width="@dimen/fabSize"
            android:layout_height="@dimen/fabSize"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="242dp"
            android:background="@drawable/fab_button"
            android:padding="@dimen/marginDefault"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_favorite_black_48dp"
            app:tint="@color/WHITE" />

        <ImageView
            android:layout_width="@dimen/fabSize"
            android:layout_height="@dimen/fabSize"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="178dp"
            android:background="@drawable/fab_button"
            android:padding="@dimen/marginDefault"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_my_location_black_48dp"
            app:tint="@color/WHITE" />

        <ImageView
            android:layout_width="@dimen/fabSize"
            android:layout_height="@dimen/fabSize"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="114dp"
            android:background="@drawable/fab_button"
            android:padding="@dimen/marginDefault"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_color_lens_black_48dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
